Starting with last modified project

--- a/freelancer/freelancer/src/freelancer/css/freelancer.css
+++ b/freelancer/freelancer/src/freelancer/css/freelancer.css
@@ -27,6 +27,17 @@
 	border-radius: 9px;
 	padding: 5px;
 }
-/*.keypad {
-	margin-top: 2px;
-}*/
+.table{
+	padding-top: 75px;
+}
+.tableheader{
+	font-size : 30px; 
+}
+
+.imageSet{
+	padding: 20
+}
+
+
+
+
