--- a/freelancer/freelancer/src/freelancer/css/main.css
+++ b/freelancer/freelancer/src/freelancer/css/main.css
@@ -205,7 +205,7 @@ iframe {
   display: block;
   width: 100%;
   background: transparent;
-  height: 62px;
+  height: 55px;
   padding: 0 20px 0 38px;
 }
 /*------------------------------------------------------------------
@@ -323,6 +323,15 @@ iframe {
   display: flex;
   flex-wrap: wrap;
 }
+.container-login100-form-btn-file {
+  width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-wrap: wrap;
+}
 
 .login100-form-btn {
   font-family: Ubuntu-Bold;
@@ -340,7 +349,7 @@ iframe {
   align-items: center;
   padding: 0 20px;
   width: 100%;
-  height: 62px;
+  height: 55px;
   background-color: #827ffe;
   border-radius: 3px;
 
@@ -350,7 +359,65 @@ iframe {
   transition: all 0.4s;
 }
 
+.login100-form-btn-file {
+  font-family: Ubuntu-Bold;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.2;
+  text-transform: uppercase;
+
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  width: 100%;
+  height: 42px;
+  margin-bottom: 10px;
+  background-color: #827ffe;
+  border-radius: 3px;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.login100-form-btn-bid {
+  font-family: Ubuntu-Bold;
+  font-size: 16px;
+  color: #fff;
+  line-height: 1.2;
+  text-transform: uppercase;
+
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  width: 95%;
+  height: 40px;
+  background-color: #283593;
+  border-radius: 3px;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+
+
 .login100-form-btn:hover {
+  background-color: #403866;
+}
+.login100-form-btn-file:hover {
   background-color: #403866;
 }
 
